--- a/10_creating_menu_hover_effects/index.html
+++ b/10_creating_menu_hover_effects/index.html
@@ -7,6 +7,15 @@
 	<title>Pure CSS Creative Menu Hover Effect</title>
 </head>
 <body>
+	<div class="menu-area">
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Services</a></li>
+			<li><a href="#">Work</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</div>
 
 </body>
 </html>
