--- a/02_learn_html_full/Quill/index.html
+++ b/02_learn_html_full/Quill/index.html
@@ -7,5 +7,75 @@
 </head>
 <body>
 
+	<header>
+		<!-- NAVIGATION -->
+		<nav>
+			<a href="index.html"><img src="images/quill.svg" alt="quill logo"></a>
+			<ul>
+				<li><a href="login.html">Login</a></li>
+				<li><a href="register.html">Register</a></li>
+			</ul>
+		</nav>
+
+		<!-- HERO SECTION -->
+		<secton>
+			<h1><span>Mindful living</span> for the <br> digital world 📱</h1>
+			<p>The ultimate bullet journal app to document, reflect, and embrace your personal journey </p>
+			<ul>
+				<li><a href="register.html">Get started</a></li>
+				<li><a href="#features">Learn more</a></li>
+			</ul>
+		</section>
+	</header>
+
+	<main>
+		<!-- FEATURED SECTION -->
+		<section>
+			<h2 id="features">Finally, a <span>simple and easy</span> to use journal app</h2>
+
+			<div>
+				<h3>Write all your journals in a few clicks</h3>
+				<p>Unlock the simplicity of online journaling - say goodbye to the hassle of pen and paper and hello to effortless journaling with just a few clicks.</p>
+				<img src="images/features-1.png" alt="img 1" width="300px">
+			</div>
+
+			<div>
+				<h3>Beautifully displayed and neatly organised</h3>
+				<p>Not just words on a screen - our journals are beautifully displayed and neatly organised.</p>
+				<img src="images/features-2.png" alt="img 2" width="300px">
+			</div>
+
+			<div>
+				<h3>Create and reflect from anywhere in the world</h3>
+				<p>Whether you're at home or exploring the far corners of the world, create and reflect on your experiences, thoughts, and emotions from anywhere on the globe.
+				</p>
+				<img src="images/features-3.png" alt="img 3" width="300px">
+			</div>
+		</section>
+		<!-- CTA SECTION -->
+		<section>
+			<h2>Get Started Now</h2>
+			<a href="register.html">Get Started</a>
+		</secton>
+	</main>
+	<!-- FOOTER -->
+	<footer>
+		<a href="index.html"><img src="images/quill.svg" alt="quill logo"></a>
+		<ul>
+			<li><a href="https://instagram.com"><img src="images/instagram.svg" alt="instagram logo" width="20px"></a></li>
+			<li><a href="https://facebook.com"><img src="images/facebook.svg" alt="facebook logo" width="20px"></a></li>
+			<li><a href="https://tiktok.com"><img src="images/tiktok.svg" alt="tiktok logo" width="20px"></a></li>
+			<li><a href="https://linkedin.com"><img src="images/linkedin.svg" alt="linkedin logo" width="20px"></a></li>
+			<li><a href="https://youtube.com"><img src="images/youtube.svg" alt="youtube logo" width="20px"></a></li>
+		</ul>
+
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="login.html">Login</a></li>
+			<li><a href="register.html">Register</a></li>
+		</ul>
+
+		<p>Made with ♥︎ in London</p>
+	</footer>
 </body>
 </html>
