--- a/02_learn_html_full/Quill/index.html
+++ b/02_learn_html_full/Quill/index.html
@@ -14,7 +14,7 @@
 	<header>
 		<!-- NAVIGATION -->
 		<nav>
-			<a href="index.html"><img src="images/quill.svg" alt="quill logo"></a>
+			<a href="index.html"><img class="logo-md" src="images/quill.svg" alt="quill logo"></a>
 			<ul>
 				<li><a href="login.html">Login</a></li>
 				<li><a class="btn btn-primary" href="register.html">Register</a></li>
@@ -22,8 +22,8 @@
 		</nav>
 
 		<!-- HERO SECTION -->
-		<secton>
-			<h1><span>Mindful living</span> for the <br> digital world 📱</h1>
+		<secton class="hero-section">
+			<h1><span class="highlight highlight-secondary">Mindful living</span> for the <br> digital world 📱</h1>
 			<p id="green-text">The ultimate bullet journal app to document, reflect, and embrace your personal journey </p>
 			<ul>
 				<li><a  class="btn btn-primary" href="register.html">Get started</a></li>
@@ -35,42 +35,44 @@
 	<main>
 		<!-- FEATURED SECTION -->
 		<section>
-			<h2 id="features">Finally, a <span>simple and easy</span> to use journal app</h2>
+			<h2 class="features-main-heading">Finally, a <span class="highlight highlight-tertiary">simple and easy</span> to use journal app</h2>
 
 			<div>
 				<h3 class="orange-text">Write all your journals in a few clicks</h3>
 				<p>Unlock the <span class="pop-text">simplicity</span> of online journaling - say goodbye to the hassle of pen and paper and hello to effortless journaling with just a few clicks.</p>
-				<img src="images/features-1.png" alt="img 1" width="300px">
+				<img class="feature-img" src="images/features-1.png" alt="img 1" >
 			</div>
 
 			<div>
 				<h3 class="orange-text">Beautifully displayed and neatly organised</h3>
 				<p>Not just words on a screen - our journals are beautifully displayed and neatly organised.</p>
-				<img src="images/features-2.png" alt="img 2" width="300px">
+				<img class="feature-img" src="images/features-2.png" alt="img 2">
 			</div>
 
 			<div>
 				<h3 class="orange-text">Create and reflect from anywhere in the world</h3>
 				<p>Whether you're at home or exploring the far corners of the world, create and reflect on your experiences, thoughts, and emotions from anywhere on the globe.
 				</p>
-				<img src="images/features-3.png" alt="img 3" width="300px">
+				<img class="feature-img" src="images/features-3.png" alt="img 3">
 			</div>
 		</section>
 		<!-- CTA SECTION -->
-		<section>
-			<h2>Get started now</h2>
-			<a class="btn btn-primary" href="register.html">Get started</a>
+		<section class="cta-section">
+			<div class="cta-card">
+				<h2>Get started now</h2>
+				<a class="btn btn-primary" href="register.html">Get started</a>
+			</div>
 		</secton>
 	</main>
 	<!-- FOOTER -->
-	<footer>
-		<a href="index.html"><img src="images/quill.svg" alt="quill logo"></a>
+	<footer class="footer">
+		<a href="index.html"><img class="logo-sm" src="images/quill.svg" alt="quill logo"></a>
 		<ul>
-			<li><a href="https://instagram.com"><img src="images/instagram.svg" alt="instagram logo" width="20px"></a></li>
-			<li><a href="https://facebook.com"><img src="images/facebook.svg" alt="facebook logo" width="20px"></a></li>
-			<li><a href="https://tiktok.com"><img src="images/tiktok.svg" alt="tiktok logo" width="20px"></a></li>
-			<li><a href="https://linkedin.com"><img src="images/linkedin.svg" alt="linkedin logo" width="20px"></a></li>
-			<li><a href="https://youtube.com"><img src="images/youtube.svg" alt="youtube logo" width="20px"></a></li>
+			<li><a href="https://instagram.com"><img class="social-icons" src="images/instagram.svg" alt="instagram logo"></a></li>
+			<li><a href="https://facebook.com"><img class="social-icons" src="images/facebook.svg" alt="facebook logo"></a></li>
+			<li><a href="https://tiktok.com"><img class="social-icons" src="images/tiktok.svg" alt="tiktok logo"></a></li>
+			<li><a href="https://linkedin.com"><img class="social-icons" src="images/linkedin.svg" alt="linkedin logo"></a></li>
+			<li><a href="https://youtube.com"><img class="social-icons" src="images/youtube.svg" alt="youtube logo"></a></li>
 		</ul>
 
 		<ul>
