--- a/02_learn_html_full/Quill/index.html
+++ b/02_learn_html_full/Quill/index.html
@@ -16,7 +16,7 @@
 		<!-- NAVIGATION -->
 		<nav class="navbar">
 			<a href="index.html"><img class="logo-md" src="images/quill.svg" alt="quill logo"></a>
-			<ul>
+			<ul class="nav-btn-container">
 				<li><a class="btn btn-primary-outline" href="login.html">Login</a></li>
 				<li><a class="btn btn-primary" href="register.html">Register</a></li>
 			</ul>
@@ -26,7 +26,7 @@
 		<section class="hero-section">
 			<h1 class="hero-heading"><span class="highlight highlight-secondary">Mindful living</span> for the <br> digital world 📱</h1>
 			<p class="hero-paragraph">The ultimate bullet journal app to document, reflect, and embrace your personal journey </p>
-			<ul>
+			<ul class="hero-btn-container">
 				<li><a  class="btn btn-primary" href="register.html">Get started</a></li>
 				<li><a class="btn btn-primary-outline" href="#features">Learn more</a></li>
 			</ul>
@@ -70,7 +70,7 @@
 		<!-- FOOTER -->
 		<footer class="footer">
 			<a href="index.html"><img class="logo-sm" src="images/quill.svg" alt="quill logo"></a>
-			<ul>
+			<ul class="social-icons-container">
 				<li><a href="https://instagram.com"><img class="social-icons" src="images/instagram.svg" alt="instagram logo"></a></li>
 				<li><a href="https://facebook.com"><img class="social-icons" src="images/facebook.svg" alt="facebook logo"></a></li>
 				<li><a href="https://tiktok.com"><img class="social-icons" src="images/tiktok.svg" alt="tiktok logo"></a></li>
@@ -78,7 +78,7 @@
 				<li><a href="https://youtube.com"><img class="social-icons" src="images/youtube.svg" alt="youtube logo"></a></li>
 			</ul>
 
-			<ul>
+			<ul class="footer-links-container">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="login.html">Login</a></li>
 				<li><a href="register.html">Register</a></li>
